<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>tracker</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>2.0.9</version>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.44.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.microhttp</groupId>
            <artifactId>microhttp</artifactId>
            <version>0.11</version>
        </dependency>
        <dependency>
            <groupId>dev.mccue</groupId>
            <artifactId>microhttp-handler</artifactId>
            <version>0.0.6</version>
        </dependency>
        <dependency>
            <groupId>dev.mccue</groupId>
            <artifactId>html</artifactId>
            <version>0.0.1-alpha3</version>
        </dependency>
        <dependency>
            <groupId>dev.mccue</groupId>
            <artifactId>microhttp-html</artifactId>
            <version>0.0.1-alpha1</version>
        </dependency>
        <dependency>
            <groupId>dev.mccue</groupId>
            <artifactId>urlparameters</artifactId>
            <version>0.1.0</version>
        </dependency>

        <dependency>
            <groupId>dev.mccue</groupId>
            <artifactId>jdbc</artifactId>
            <version>0.0.1-alpha3</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>
                        <arg>-Xlint:all</arg>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>